# GKL

./: .gitignore  CMakeLists.txt
src/main/java/com/ibm/pairhmm/: PowerPairHmm.java
src/main/native/common/: avx.h
src/main/native/pairhmm/: CMakeLists.txt  IntelPairHmm.cc  JavaData.h  PowerPairHmm.cc  avx512-functions-double.h  avx512_impl.cc  avx_impl.cc  pairhmm_common.h
